--- a/src/corePackages/Core.Application/Core.Application.csproj
+++ b/src/corePackages/Core.Application/Core.Application.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\erpaKablo\Domain\Domain.csproj" />
       <ProjectReference Include="..\Core.Persistence\Core.Persistence.csproj" />
     </ItemGroup>
 
