--- a/src/erpaKablo/Application/Application.csproj
+++ b/src/erpaKablo/Application/Application.csproj
@@ -7,11 +7,17 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\corePackages\Core.Application\Core.Application.csproj" />
+      <ProjectReference Include="..\..\corePackages\Core.CrossCuttingConcerns\Core.CrossCuttingConcerns.csproj" />
       <ProjectReference Include="..\..\corePackages\Core.Persistence\Core.Persistence.csproj" />
       <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
+      <PackageReference Include="FluentValidation" Version="11.9.1" />
+      <PackageReference Include="MediatR" Version="12.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
       <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.4" />
     </ItemGroup>
 
