categor,brand,ImagesandTitle

--- a/src/erpaKablo/WebAPI/WebAPI.csproj
+++ b/src/erpaKablo/WebAPI/WebAPI.csproj
@@ -31,4 +31,81 @@
         <Folder Include="wwwroot\"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-pelotas-ayakkabi-cmp-plts-1-19fa9c6a83544cfb\ekran-resmi-2024-08-02-16-23-19-20240802132446.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-pelotas-ayakkabi-cmp-plts-1-19fa9c6a83544cfb\ekran-resmi-2024-08-02-16-23-26-20240802132457.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-pelotas-ayakkabi-cmp-plts-1-19fa9c6a83544cfb\ekran-resmi-2024-08-02-16-23-31-20240802132455.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-pelotas-ayakkabi-cmp-plts-1-19ff8408a0674d1b\camper-pelotas-siyah2-20240731112459.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-pelotas-ayakkabi-cmp-plts-1-19ff8408a0674d1b\camper-pelotas-siyah3-20240731112502.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-pelotas-ayakkabi-cmp-plts-1-19ff8408a0674d1b\camper-pelotas-siyah4-20240731112503.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-pelotas-ayakkabi-cmp-plts-1-4076d6aac49646fe\ekran-resmi-2024-08-02-16-23-58-20240802132531.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-pelotas-ayakkabi-cmp-plts-1-4076d6aac49646fe\ekran-resmi-2024-08-02-16-24-05-20240802132541.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-pelotas-ayakkabi-cmp-plts-1-4076d6aac49646fe\ekran-resmi-2024-08-02-16-24-11-20240802132543.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-pelotas-ayakkabi-cmp-plts-1-595caccadf9c4aa5\camper-pelotas-kahve1-20240731112447.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-pelotas-ayakkabi-cmp-plts-1-595caccadf9c4aa5\camper-pelotas-kahve2-20240731112451.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-pelotas-ayakkabi-cmp-plts-1-595caccadf9c4aa5\camper-pelotas-kahve4-20240731112455.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-psaadakdka-10101-21a36c3200374a40\ekran-resmi-2024-08-02-11-51-24-20240804101528.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-psaadakdka-10101-21d364c857644c34\ekran-resmi-2024-08-02-17-43-25-20240804101521.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-psaadakdka-10101-73a0170c15094323\ekran-resmi-2024-08-02-11-51-45-20240804101522.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-psaadakdka-10101-f620ce16976546be\ekran-resmi-2024-08-02-18-17-12-20240804101516.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\ecommerce-default-product.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu1-93838-570696ffda1745bf\w12scsz84z8412-20240812223722.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-005337ede17f4c34\w12scsz84z8412-20240812231934.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-1a417571454c4c87\w12scsz84z8412-20240813090712.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-1c5a695ac1194137\w12scsz84z8412-20240813091234.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-2de3fdcff9024145\w12scsz84z8412-20240813001039.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-33978f05b4af45fb\w12scsz84z8412-20240813092000.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-508935cb6c9e4203\w12scsz84z8412-20240813084143.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-5c74443a13194d34\w12scsz84z8412-20240812231931.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-5f7f6d27a0904dbd\w12scsz84z8412-20240813001049.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-7bcf945f5e7145c9\w12scsz84z8412-20240813091958.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-8238cf3ef2644102\w12scsz84z8412-20240813090701.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-8ed9ed63ce4f4e45\w12scsz84z8412-20240812231315.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-9379235117704379\w12scsz84z8412-20240813091944.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-958cbed7f5a14779\w12scsz84z8412-20240812230043.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-97c4a6b572b4483d\w12scsz84z8412-20240813001047.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-a1c29ac127694f4e\w12scsz84z8412-20240813091242.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-a6ec740c87bc4d07\w12scsz84z8412-20240813084140.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-bc84550286624b1f\w12scsz84z8412-20240812232904.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-c078716bdde44363\w12scsz84z8412-20240813090715.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-c2ed4e3d6bb24769\w12scsz84z8412-20240812232906.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-c34bfb6234b9498d\w12scsz84z8412-20240812231307.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-c89ee05f5083414b\w12scsz84z8412-20240812230035.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-c8bd87ae18254c45\w12scsz84z8412-20240812231924.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-cabbf73825aa40b8\w12scsz84z8412-20240812232857.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-ce563bb69a314c65\w12scsz84z8412-20240813091239.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-e0cb0d8fd580489b\w12scsz84z8412-20240813084135.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-e477dbe92c05416a\w12scsz84z8412-20240812231322.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\erkekkotpantolonu2-3245-f37bd7017f984851\w12scsz84z8412-20240812230045.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\monster-notebokk-mnstr-16-128-661b4ad3ff654e96\36622df2ab984edc9ca3861df99c94a7-20240804091343.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\monster-notebokk-mnstr-16-128-661b4ad3ff654e96\7ad4ef7855564f96a5053b6398a1010d-20240804091339.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\monster-notebokk-mnstr-16-256-f6a7847df8fc4eb4\36622df2ab984edc9ca3861df99c94a7-20240804091353.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\monster-notebokk-mnstr-16-256-f6a7847df8fc4eb4\7ad4ef7855564f96a5053b6398a1010d-20240804091351.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\monster-notebokk-mnstr-32-128-ca8b84f2663d4e55\36622df2ab984edc9ca3861df99c94a7-20240804091346.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\monster-notebokk-mnstr-32-128-ca8b84f2663d4e55\7ad4ef7855564f96a5053b6398a1010d-20240804091345.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\monster-notebokk-mnstr-32-256-385aee00ee0446d4\36622df2ab984edc9ca3861df99c94a7-20240804091357.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\monster-notebokk-mnstr-32-256-385aee00ee0446d4\7ad4ef7855564f96a5053b6398a1010d-20240804091355.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\monster-notebokk-mnstr-8-128-a2fa482292a646e7\36622df2ab984edc9ca3861df99c94a7-20240804091350.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\monster-notebokk-mnstr-8-128-a2fa482292a646e7\7ad4ef7855564f96a5053b6398a1010d-20240804091348.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\monster-notebokk-mnstr-8-256-68c841b2d6714292\36622df2ab984edc9ca3861df99c94a7-20240804091400.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\monster-notebokk-mnstr-8-256-68c841b2d6714292\7ad4ef7855564f96a5053b6398a1010d-20240804091358.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\brands\camper-05b5487ba84f4690\camper-logo-20240818102058.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-erkek-ayakkabi-8994-51df2f2bb088423a\camper-pelotas-kahve1-20240819185511.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-erkek-ayakkabi-8994-51df2f2bb088423a\camper-pelotas-kahve2-20240819185517.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-erkek-ayakkabi-8994-51df2f2bb088423a\camper-pelotas-kahve3-20240819185518.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-erkek-ayakkabi-8994-51df2f2bb088423a\camper-pelotas-kahve4-20240819185520.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-erkek-ayakkabi-8994-7b65c073cae54588\camper-pelotas-kahve1-20240819185529.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-erkek-ayakkabi-8994-7b65c073cae54588\camper-pelotas-kahve2-20240819185530.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-erkek-ayakkabi-8994-7b65c073cae54588\camper-pelotas-kahve3-20240819185532.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-erkek-ayakkabi-8994-7b65c073cae54588\camper-pelotas-kahve4-20240819185534.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-erkek-ayakkabi-8994-8703b8a35f364086\36622df2ab984edc9ca3861df99c94a7-20240819185538.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-erkek-ayakkabi-8994-8703b8a35f364086\7ad4ef7855564f96a5053b6398a1010d-20240819185536.webp" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-erkek-ayakkabi-8994-8703b8a35f364086\camper-pelotas-kahve1-20240819185540.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-erkek-ayakkabi-8994-8703b8a35f364086\camper-pelotas-kahve2-20240819185542.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-erkek-ayakkabi-8994-d32d200228304a14\camper-pelotas-siyah1-20240819185522.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-erkek-ayakkabi-8994-d32d200228304a14\camper-pelotas-siyah2-20240819185524.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-erkek-ayakkabi-8994-d32d200228304a14\camper-pelotas-siyah3-20240819185525.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\camper-erkek-ayakkabi-8994-d32d200228304a14\camper-pelotas-siyah4-20240819185527.jpg" />
+    </ItemGroup>
+
 </Project>
