--- a/src/erpaKablo/Infrastructure/Infrastructure.csproj
+++ b/src/erpaKablo/Infrastructure/Infrastructure.csproj
@@ -17,6 +17,8 @@
         <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17"/>
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1"/>
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.Graph" Version="4.0.0" />
+        <PackageReference Include="Microsoft.Identity.Client" Version="4.65.0" />
         <PackageReference Include="SkiaSharp" Version="2.88.8"/>
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
     </ItemGroup>
