--- a/src/erpaKablo/WebAPI/WebAPI.csproj
+++ b/src/erpaKablo/WebAPI/WebAPI.csproj
@@ -129,6 +129,88 @@
       <_ContentIncludedByDefault Remove="wwwroot\categories\hydraulics-9a1175b1881d45d9\hydraulicsl1-20240821101251.avif" />
       <_ContentIncludedByDefault Remove="wwwroot\categories\janitorial-a95da623936344ca\janitorial-20240821101338.avif" />
       <_ContentIncludedByDefault Remove="wwwroot\categories\abrasives-d7a071c8d72f4e49\abrasives-20241117215649.avif" />
+      <_ContentIncludedByDefault Remove="wwwroot\brands\3m-30874e6389364bb4\3m-20241120095413.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\brands\3m-a2dafe8facc64dc8\3m-20241203140359.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\brands\camper-28b5b44830a74648\camper-logo-20241120123053.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\brands\camper-3d37b18729de4de8\camper-logo-20241120123816.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\brands\camper-43b298f4327e4e34\camper-logo-20241120124341.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\brands\camper-90ebd7213a774a40\camper-logo-20241120132907.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\brands\camper-997cc66a52bb4923\camper-logo-20241120125802.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\brands\camper-9e250ef15fa34cfc\camper-logo-20241120122624.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\brands\camper-a271a0a33089475c\camper-logo-20241120125447.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\brands\camper-db6b8091b62149c6\camper-logo-20241120125553.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\brands\camper-f45d814a33ac4c04\camper-logo-20241120123918.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\brands\camper-fe8b52792ad74ec0\camper-logo-20241120130009.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\brands\deneme-09a666bfa3b64920\camper-logo-20241120121944.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\brands\deneme-1b5ee310fa764629\adsiz-tasarim-4-20241120133733.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\brands\deneme-eaf7628926c945ed\adsiz-tasarim-4-20241120133726.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\categories\abrasives-119bcc847bea4282\abrasives-20241120095628.avif" />
+      <_ContentIncludedByDefault Remove="wwwroot\categories\abrasives-c6aec3355e004f49\abrasives-20241203140522.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\categories\adhesives-897be3f673e0431b\adhesives1-20241123091702.avif" />
+      <_ContentIncludedByDefault Remove="wwwroot\categories\bearings-a3434dae18dc4942\bearings-20241123092002.avif" />
+      <_ContentIncludedByDefault Remove="wwwroot\categories\burrs-and-deburring-tools-7975212addfc4eb5\burrs-and-deburring-tools-20241123092234.avif" />
+      <_ContentIncludedByDefault Remove="wwwroot\categories\coated-and-non-woven-abrasives-41b943e0ac7e4202\coated-and-non-woven-abrasives-1-20241123095433.avif" />
+      <_ContentIncludedByDefault Remove="wwwroot\categories\cutting-tools-86fdf14826aa4351\cutting-tools-20241123092528.avif" />
+      <_ContentIncludedByDefault Remove="wwwroot\categories\deneme-alt-alt-466c3a7568c243a2\coated-and-non-woven-abrasives2-20241123095553.avif" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\akmdkakakk-2134124-bc816654a6d64634\abrasives-20241204154647.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\asdasdas-10201-722d489b532f4718\camper-pelotas-siyah1-20241123220943.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\asdasdas-10201-722d489b532f4718\camper-pelotas-siyah2-20241123220944.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\asdasdas-10201-722d489b532f4718\camper-pelotas-siyah3-20241123220949.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\asdasdas-10201-e2e0d828def64777\camper-pelotas-kahve1-20241123220935.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\asdasdas-10201-e2e0d828def64777\camper-pelotas-kahve2-20241123220940.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\asdasdas-10201-e2e0d828def64777\camper-pelotas-kahve3-20241123220941.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\asdasdas-10201-e2e0d828def64777\camper-pelotas-kahve4-20241123220942.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\dedede-11-26bf82feead84fcd\camper-pelotas-siyah1-20241125100127.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\dedede-11-26bf82feead84fcd\camper-pelotas-siyah2-20241125100130.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\dedede-11-26bf82feead84fcd\camper-pelotas-siyah3-20241125100128.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\dedede-11-26bf82feead84fcd\camper-pelotas-siyah4-20241125100129.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\deneme-19-050029c663b34913\adhesives-20241203140928.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\deneme-19-eaf04fec90754fde\abrasives-20241203140925.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\googlestoragedeneme-1010-caf7c72c6abe4aaf\camper-pelotas-siyah1-20241207113822.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\googlestoragedeneme-1010-caf7c72c6abe4aaf\camper-pelotas-siyah2-20241207113823.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\googlestoragedeneme-1010-caf7c72c6abe4aaf\camper-pelotas-siyah3-20241207113824.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\googlestoragedeneme-1010-caf7c72c6abe4aaf\camper-pelotas-siyah4-20241207113825.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\googlestoragedeneme-1010-efd641c0ee0a4ece\camper-pelotas-kahve1-20241207113817.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\googlestoragedeneme-1010-efd641c0ee0a4ece\camper-pelotas-kahve2-20241207113819.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\googlestoragedeneme-1010-efd641c0ee0a4ece\camper-pelotas-kahve3-20241207113820.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\googlestoragedeneme-1010-efd641c0ee0a4ece\camper-pelotas-kahve4-20241207113821.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\googlestoragedeneme2-112312-059c80b5076c424d\kb4ictmp-ekbmp9f2f4452-8721-46b8-99c5-0076a1ebe255150103373444647394376291453454345-20241207114525.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\googlestoragedeneme2-112312-ab80db1662444c27\uekdbo5r-s5lmp182dcb72-e385-4af4-8605-f2771cd37ef9154300080702534545358545046874722-20241207114534.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\googlestoragedeneme3-1-91c221f035434b2a\suhortum5-20241207132618.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\googlestoragedeneme4-1-5ecbb47285c640ce\products-googlestoragedeneme2-112312-ab80db1662444c27-uekdbo5r-s5lmp182dcb72-e385-4af4-8605-f2771cd37ef9154300080702534545358545046874722-20241207114534-20241207150954.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabah1-123-999f87e0f43e4cf5\kb4ictmp-ekbmp9f2f4452-8721-46b8-99c5-0076a1ebe255150103373444647394376291453454345-20241205083148.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabah2-1-35ceeeccf36a4f0d\ayakkabi-logo-20241205092356.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabah2-123-039e11f9d53245d6\ayakkabi-logo-20241205121609.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabah2-123-17c10cef777e4dfb\ayakkabi-logo-20241205121617.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabah2-123-31180b0230ad4da9\ayakkabi-logo-20241205121613.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabah2-123-50f88e82f9394dac\ayakkabi-logo-20241205121610.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabah2-123-67983c0963ed45e4\kb4ictmp-ekbmp9f2f4452-8721-46b8-99c5-0076a1ebe255150103373444647394376291453454345-20241205121607.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabah2-123-6b16d6decfa74477\ayakkabi-logo-20241205121614.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabah2-123-6ecc74bea9874cd8\ayakkabi-logo-20241205092203.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabah2-123-9c89cdca3aa048e3\ayakkabi-logo-20241205121611.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabah2-123-b91b18f38a8f4a72\ayakkabi-logo-20241205121615.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabahsabahyaz-101029-5020614208b34183\camper-pelotas-kahve1-20241205101048.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabahsabahyaz-101029-5020614208b34183\camper-pelotas-kahve2-20241205101050.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabahsabahyaz-101029-5020614208b34183\camper-pelotas-kahve3-20241205101051.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabahsabahyaz-101029-5020614208b34183\camper-pelotas-kahve4-20241205101052.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabahsabahyaz-101029-a65509e1955d43f9\camper-pelotas-siyah1-20241205101101.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabahsabahyaz-101029-a65509e1955d43f9\camper-pelotas-siyah2-20241205101103.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabahsabahyaz-101029-a65509e1955d43f9\camper-pelotas-siyah3-20241205101104.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabahsabahyaz-101029-a65509e1955d43f9\camper-pelotas-siyah4-20241205101105.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabahsabahyaz-101029-c2774141ed584619\camper-pelotas-siyah1-20241205101054.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabahsabahyaz-101029-c2774141ed584619\camper-pelotas-siyah2-20241205101056.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabahsabahyaz-101029-c2774141ed584619\camper-pelotas-siyah3-20241205101058.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabahsabahyaz-101029-c2774141ed584619\camper-pelotas-siyah4-20241205101059.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabahsabahyaz-101029-fe52024fe3f847eb\camper-pelotas-kahve1-20241205101041.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabahsabahyaz-101029-fe52024fe3f847eb\camper-pelotas-kahve2-20241205101043.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabahsabahyaz-101029-fe52024fe3f847eb\camper-pelotas-kahve3-20241205101044.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sabahsabahyaz-101029-fe52024fe3f847eb\camper-pelotas-kahve4-20241205101047.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sadasda-91239192-641e5a6f2ca644c4\camper-pelotas-siyah1-20241204154026.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sadasda-91239192-641e5a6f2ca644c4\camper-pelotas-siyah2-20241204154027.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sadasda-91239192-641e5a6f2ca644c4\camper-pelotas-siyah3-20241204154027.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sadasda-91239192-641e5a6f2ca644c4\camper-pelotas-siyah4-20241204154027.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\zip-wheel™-cut-off-wheel-13134-127091392ddf4c6f\walter11t042-zipcut-20241120100055.avif" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\zip-wheel™-cut-off-wheel-13134-e3c7f23e8f814931\walter11t042-zipcut-20241120100053.avif" />
     </ItemGroup>
 
     <ItemGroup>
