--- a/src/erpaKablo/Persistence/Persistence.csproj
+++ b/src/erpaKablo/Persistence/Persistence.csproj
@@ -32,4 +32,8 @@
         <ProjectReference Include="..\Domain\Domain.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Repositories\DescriptionRepository.cs" />
+    </ItemGroup>
+
 </Project>
