--- a/src/erpaKablo/WebAPI/WebAPI.csproj
+++ b/src/erpaKablo/WebAPI/WebAPI.csproj
@@ -211,6 +211,16 @@
       <_ContentIncludedByDefault Remove="wwwroot\products\sadasda-91239192-641e5a6f2ca644c4\camper-pelotas-siyah4-20241204154027.jpg" />
       <_ContentIncludedByDefault Remove="wwwroot\products\zip-wheel™-cut-off-wheel-13134-127091392ddf4c6f\walter11t042-zipcut-20241120100055.avif" />
       <_ContentIncludedByDefault Remove="wwwroot\products\zip-wheel™-cut-off-wheel-13134-e3c7f23e8f814931\walter11t042-zipcut-20241120100053.avif" />
+      <_ContentIncludedByDefault Remove="wwwroot\editor-images\6ea7e9fd-037a-4bee-aa34-408703357c6b\camper-pelotas-siyah2-20241210105030.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\editor-images\08501800-843d-4847-9c81-043a7aac88d2\camper-pelotas-siyah2-20241210105030.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\editor-images\c12a679f-0fcb-4f17-8161-0ea368b17ce0\camper-pelotas-siyah3-20241210105812.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\dendeme-21312-bc76f0b8ac854abf\camper-pelotas-siyah1-20241210105213.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\denemedesc-12312-789241869c1d4ff7\products-googlestoragedeneme4-1-5ecbb47285c640ce-products-googlestoragedeneme2-112312-ab80db1662444c27-uekdbo5r-s5lmp182dcb72-e385-4af4-8605-f2771cd37ef9154300080702534545358545046874722-20241207114534-20241207150954-20241210185640.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\descirptiondeneme-123-cd181776ad1f4c38\camper-pelotas-siyah4-20241210223517.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\descirptiondeneme-123-fa83c562771e4ac7\camper-pelotas-kahve4-20241210222420.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\descirptiondeneme-3123-e96e25db25634eca\kb4ictmp-ekbmp9f2f4452-8721-46b8-99c5-0076a1ebe255150103373444647394376291453454345-20241211082515.jpg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\descriptionludeneme3-123-dd15a872763041b5\ayakkabi-logo-20241210132846.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\kdadkadkahdkah-21312-d3456a7dc0af47a0\camper-pelotas-kahve3-20241211102021.jpg" />
     </ItemGroup>
 
     <ItemGroup>
