--- a/src/erpaKablo/Domain/Domain.csproj
+++ b/src/erpaKablo/Domain/Domain.csproj
@@ -14,4 +14,9 @@
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="DescriptionImageFile.cs" />
+      <Compile Remove="Description.cs" />
+    </ItemGroup>
+
 </Project>
